made a few cchanges to my lib file and added a few code to my main.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 time = "0.3.36"
-zokrates_core = "0.7.3"
-zokrates_field = "0.5.1"
-zokrates_common = "0.4.1"
-zokrates_proof_systems = "0.3.0"
+# zokrates_core = "0.7.3"
+# zokrates_field = "0.5.1"
+# zokrates_common = "0.4.1"
+# zokrates_proof_systems = "0.3.0"
 rand = "0.8.5"
 sha2 = "0.10.6"
 hex = "0.4.3"
